fixed overflow issue on fanclub page

--- a/styles/style.css
+++ b/styles/style.css
@@ -1675,6 +1675,7 @@ main {
     gap: 20px;
     width: 100%;
     height: 500px;
+    overflow: hidden;
 }
 
 .perk_card {
